# sources_of_tasks_and_contracts

./: README.md  main.py  pyproject.toml
src/: protocol.py  sources.py  task.py  validation.py
tests/: tasks.json  test_sources_funcionality.py  test_task_source_protocol.py  test_task_source_validation.py
